Stop jump when mySky loads in

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,5 @@
     display: flex;
     flex-direction: column;
     min-height: 40rem;
-    justify-content: space-around;
     align-items: center;
 }
